<resources>
    <string name="app_name">Tattler</string>
    <string name="drawerOpen">Open navigation drawer</string>
    <string name="drawerClose">Close navigation drawer</string>

    <!--Transitions-->
    <string name="contactAvatar">contactAvatar</string>
    <string name="contactName">contactName</string>
    <string name="contactNumber">contactNumber</string>


    <!--Labels-->
    <string name="touchFingerSensorToAppLogin">Touch the sensor with your finger to login to Tattler application
    </string>
    <string name="enterMessage">Enter message…</string>
    <string name="polishLanguageCountyCode">(+48) Poland</string>
    <string name="phoneNumber">Phone number</string>
    <string name="userName">User name</string>
    <string name="startMessaging">Start Messaging</string>
    <string name="verificationCode">Verification code</string>
    <string name="verifyPhoneNumber">Verify phone number</string>
    <string name="contacts">Contacts</string>
    <string name="chats">Chats</string>
    <string name="invitations">Invitations</string>
    <string name="tattlerNumber">Tattler number</string>
    <string name="addContact">Add contact</string>
    <string name="addNewContact">Add new contact</string>
    <string name="sendMessage">Send message</string>
    <string name="mute">Mute</string>
    <string name="block">Block</string>
    <string name="removeContacts">Remove contacts</string>
    <string name="removeChats">Remove chats</string>
    <string name="startChat">Start chat</string>
    <string name="lastMessageByMe">You: %1$s</string>
    <string name="lastMessageToMe">%1$s</string>
    <string name="photo">Photo</string>
    <string name="settings">Settings</string>
    <string name="notificationsSettings">Notifications settings</string>
    <string name="notificationsLabel">Notifications</string>
    <string name="notificationsPreview">Notifications preview</string>
    <string name="notificationsSound">Notifications sound</string>
    <string name="notificationsVibration">Notifications vibration</string>
    <string name="notificationsLight">Notifications light</string>
    <string name="muteToggle">Toggle mute</string>
    <string name="blockToggle">Toggle block</string>
    <string name="logout">Logout</string>

    <!--Toasts-->
    <string name="authenticationError">Authentication error: %1$s</string>
    <string name="authenticationFail">Authentication failed</string>
    <string name="authenticationHelp">Authentication help: %1$s</string>
    <string name="authenticationSuccess">Authentication succeeded</string>
    <string name="fingerprintNotSupported">Your device does not support fingerprint authentication</string>
    <string name="fingerprintNoPermission">Please enable the fingerprint permission</string>
    <string name="fingerprintNotConfigured">No fingerprint configured. Please register at least one fingerprint in your device settings</string>
    <string name="lockScreenNotEnabled">Please enable screen lock security in your device settings</string>
    <string name="fingerSensorError">A fingerprint sensor error occurred</string>
    <string name="verificationCodeIncorrect">Verification code is incorrect</string>
    <string name="phoneAuthenticationFail">Phone number authentication failed</string>
    <string name="noLastAuthenticationRequest">Phone authentication request not found</string>
    <string name="phoneAuthentication">Phone authentication is already running</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="contactCreatingError">An error occurred while adding contact</string>
    <string name="chatCreatingError">An error occurred while creating chat</string>
    <string name="invalidVerificationCodeError">Given verification code is invalid</string>
    <string name="contactAlreadyAddedInfo">Contact already added but was updated</string>
    <string name="contactNotExist">Such contact does not exist</string>
    <string name="phoneNumberInvalid">Phone number verification failed. Given data may be incorrect.</string>
    <string name="fillAllRequiredAreasInfo">Please fill all required areas and try again.</string>

    <string-array name="avatarsColors">
        <item>#F8B195</item>
        <item>#F67280</item>
        <item>#C06C84</item>
        <item>#6C5B7B</item>
        <item>#355C7D</item>
        <item>#F26B38</item>
        <item>#2F9599</item>
        <item>#A7226E</item>
        <item>#EC2049</item>
        <item>#A8CD1B</item>
    </string-array>
</resources>
