<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navContactsFragment"
            android:icon="@drawable/ic_contacts"
            android:title="@string/contacts" />
        <item
            android:id="@+id/navChatsFragment"
            android:icon="@drawable/ic_chats"
            android:title="@string/chats" />
        <item
            android:id="@+id/navInvitationsFragment"
            android:icon="@drawable/ic_invitations"
            android:title="@string/invitations" />
        <item
            android:id="@+id/navSettingsFragment"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
</menu>