<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/primaryTitleViewHeight"
        android:background="@color/colorPrimary"
        android:theme="@style/PrimaryTitleStyle"
        android:text="@string/addNewContact"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding">

        <EditText
            android:id="@+id/tattlerNumberArea"
            style="@style/PrimaryEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:hint="@string/tattlerNumber"
            android:inputType="number"
            android:layout_marginBottom="@dimen/space10"
            android:maxLength="9"/>

        <EditText
            android:id="@+id/userNameArea"
            style="@style/PrimaryEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:hint="@string/userName"
            android:layout_marginBottom="@dimen/space10"
            android:inputType="text"/>

        <Button
            android:id="@+id/addContactButton"
            style="@style/PrimaryButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addContact"/>

    </LinearLayout>

</LinearLayout>