<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="@dimen/space16"
    tools:context=".register.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/countryPhoneCodeNumber"
            style="@style/textViewDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/polishLanguageCountyCode" />

        <EditText
            android:id="@+id/phoneNumberEditText"
            style="@style/PrimaryEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phoneNumber"
            android:inputType="phone" />

        <TextView
            android:id="@+id/infoLabel"
            style="@style/textViewInfoLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/startButton"
            style="@style/PrimaryButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/space20"
            android:text="@string/startMessaging" />

    </LinearLayout>

</ScrollView>