<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="@dimen/space16"
    tools:context=".register.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/phoneNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space10"
            android:layout_marginEnd="@dimen/elevation_radius"
            android:layout_marginStart="@dimen/elevation_radius"
            android:layout_marginTop="@dimen/elevation_radius"
            android:background="@drawable/rounded_background"
            android:elevation="@dimen/elevation_radius"
            android:hint="@string/phoneNumber"
            android:inputType="phone"
            android:theme="@style/PrimaryEditText" />

        <EditText
            android:id="@+id/userNameEditText"
            style="@style/PrimaryEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space10"
            android:layout_marginEnd="@dimen/elevation_radius"
            android:layout_marginStart="@dimen/elevation_radius"
            android:layout_marginTop="@dimen/elevation_radius"
            android:background="@drawable/rounded_background"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
            android:elevation="@dimen/elevation_radius"
            android:hint="@string/userName"
            android:inputType="textNoSuggestions" />

        <Button
            android:id="@+id/verifyPhoneButton"
            style="@style/PrimaryButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space10"
            android:text="@string/verifyPhoneNumber" />


    </LinearLayout>

</ScrollView>